Refactor inventory module; add Loan management functionality
- Removed `ProducesGRN` interface and related logic.
- Introduced `InventoryLoanOut` and `InventoryLoanOutItem` classes for managing loaned inventory.
- Added new abstract classes `InventoryReturn` and `InventoryReturnItem` to handle return workflows.
- Updated `ReceiveMaterial` with loan return handling and label adjustments.
- Enhanced `POBrowser` and `GRNEditor` for improved GRN management and UI workflows.
- Refined `SpeechRecognition` component to support voice commands.
- Implemented changes across `AccessControl`, inventory, and UI modules for improved access and functionality.